--- a/autostock/pom.xml
+++ b/autostock/pom.xml
@@ -29,8 +29,12 @@
       <artifactId>slack-api-client</artifactId>
       <version>1.4.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.jacob/jacob -->
-
+    <!-- https://mvnrepository.com/artifact/org.bytedeco/qt-platform -->
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>qt-platform</artifactId>
+      <version>5.15.0-1.5.4</version>
+    </dependency>
   </dependencies>
 
   <build>
