--- a/autostock/pom.xml
+++ b/autostock/pom.xml
@@ -12,8 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -41,6 +41,13 @@
       <groupId>org.bytedeco</groupId>
       <artifactId>qt</artifactId>
       <version>5.15.0-1.5.4</version>
+    </dependency>
+    <dependency>
+      <artifactId>jacob</artifactId>
+      <groupId>jacob</groupId>
+      <scope>system</scope>
+      <systemPath>${basedir}/src/dependency/jacob.jar</systemPath>
+      <version>2.0</version>
     </dependency>
 
   </dependencies>
